--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<aside id="fh5co-hero" class="js-fullheight">
 				<div class="flexslider">
 					<ul class="slides">
-				   	<li style="background-image: url(images/item_chang1.jpg); background-size: 100%;">
+				   	<li style="background-image: url(images/item_chang1.jpg);">
 					   		<div class="overlay"></div>
 					   		<div class="container-fluid">
 					   			<div class="row">
@@ -92,7 +92,7 @@
 						   		</div>
 					   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/item_chang2.jpg);background-size: 100%;">
+				   	<li style="background-image: url(images/item_chang2.jpg);">
 				   		<a href="https://changxiaowei.github.io/" target="_blank">
 					   		<div class="overlay"></div>
 					   		<div class="container-fluid">
@@ -107,7 +107,7 @@
 					   		</div>
 				   		</a>
 				   	</li>
-				   	<li style="background-image: url(images/item_chang3.jpg);background-position: ; background-size: 100%;">
+				   	<li style="background-image: url(images/item_chang3.jpg);background-position: ;">
 				   		<a href="portfolio.html" target="_blank">
 					   		<div class="overlay"></div>
 					   		<div class="container-fluid">
