--- a/index.html
+++ b/index.html
@@ -191,11 +191,9 @@
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="https://www.rakuten.ne.jp/gold/southfloor/" class="blog-img"><img src="images/item1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="https://changxiaowei.github.io/H5/" class="blog-img"><img src="images/item1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3>网页项目2</h3>
-								<a href="https://www.rakuten.ne.jp/gold/southfloor/" target="_blank">pc端</a> <br />
-								<a href="https://www.rakuten.ne.jp/gold/rabie89/smart/index.html" target="_blank">sp端</a> <br />
 								<a href="portfolio.html" target="_blank" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
